<resources>
    <string name="app_name">RwandaAir</string>
    <string name="check_in_btn_text">Check into RwandaAir</string>
    <string name="done_button">Done</string>
    <string name="reservation">Reservation Code(PNR)</string>
    <string name="reservation_explanation">A unique 6 - character code given to each reservation. A reservation code is required for online check in.</string>
    <string name="flight_number">Flight Number</string>
    <string name="ticket_number_explanation">A unique 13-digit number given to each ticket issued. Most Rwandair ticket numbers begin with 235.</string>
    <string name="flight_number_explanation">The number by which a flight on a particular day and route is identified. Flight numbers for our flights start with TKfollowed by a 4-digit number.</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="instructions">Instructions</string>
    <string name="todo">TODO</string>

</resources>
