<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/exit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginLeft="368dp"
            android:layout_marginTop="22dp"
            android:layout_marginRight="21dp"
            android:contentDescription="@string/todo"
            android:paddingStart="368dp"
            android:paddingLeft="368dp"
            android:paddingEnd="21dp"
            android:paddingRight="21dp"
            app:srcCompat="@drawable/delete"
            android:layout_marginStart="368dp"
            android:layout_marginEnd="21dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/instructions"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ticket_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="85dp"
            android:text="@string/ticket_number"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ticket_number_explanation"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="6sp"
            android:text="@string/ticket_number_explanation"
            android:textColor="#000"
            android:textScaleX="1.2" />

        <TextView
            android:id="@+id/reservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/reservation"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reservation_explanation"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="6sp"
            android:text="@string/reservation_explanation"
            android:textColor="#000"
            android:textScaleX="1.2" />

        <TextView
            android:id="@+id/flight_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/flight_number"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/flight_number_explanation"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="6sp"
            android:text="@string/flight_number_explanation"
            android:textColor="#000"
            android:textScaleX="1.2" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="200dp"
            android:background="#FBE012"
            android:text="@string/done_button"
            android:textAllCaps="false"
            android:textColor="#021171"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>